2009-02-04  Adam Schreiber  <sadam@clemson.edu>

    * pgp/seahorse-sign.glade:
    * ssh/seahorse-ssh-upload.glade:
    * ssh/seahorse-ssh-generate.glade: Remove explicit line breaks from glade
    files.  Patch from Gabor Kelemen.  Fixes bug #570485
    
2009-02-03  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: increment version number to 2.25.91

=== seahorse 2.25.90 ===
2009-02-03  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * NEWS:
    * README: Release version 2.25.1

2009-02-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* daemon/Makefile.am: Remove excessive $(srcdir) in rules, fixing
	non-source-dir build error.  Fixes bug #570330.

2009-02-02  Stef Walter  <stef@memberwebs.com>

	* configure.in: Remove libtasn1 dependency. 
	
2009-02-01  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-keyring.c:
	* gkr/seahorse-gkr-keyring.h: 
	* gkr/seahorse-gkr-source.c: Retrieve default key name and set 
	default keyring flag on keyrings.
	
	* gkr/seahorse-gkr-keyring-commands.c: Add menu item to make keyring
	default.
	
	* gkr/seahorse-gkr-source.c:
	* gkr/seahorse-gkr-source.h: Add concept of a 'default' gkr source, 
	so we can access it for refresh operations and the like.  
	
	* libseahorse/seahorse-context.c: Don't refresh sources as they're 
	added to the context. Only refresh when specifically requested.
	
	* gkr/seahorse-gkr-source.c: Refresh keyring sources when the main
	gkr source is refreshed.
	
	* gkr/seahorse-gkr-keyring-commands.c: Refresh all keyrings when the 
	status of a keyring changes. For example lock/unlock, set default etc..
	
2009-02-01  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-source.c: Don't show the session keyring.

2009-02-01  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-keyring-commands.c:
	* gkr/seahorse-gkr-keyring-commands.h: Add 'lock' and 'unlock' commands
	to password keyrings.

2009-02-01  Stef Walter  <stef@memberwebs.com>
