@@ -583,6 +583,7 @@ common/Makefile
 gkr/Makefile
 libcryptui/cryptui.pc
 libcryptui/Makefile
+libcryptui/tests/Makefile
 libegg/Makefile
 libseahorse/Makefile
 pgp/Makefile
