@@ -1,3 +1,11 @@
+2009-02-04  Stef Walter  <stef@memberwebs.com>
+
+	* configure.in:
+	* libcryptui/Makefile.am:
+	* libcryptui/tests/Makefile.am:
+	* libcryptui/tests/cryptui-test-ui.c: Revert accidental deletion 
+	of libcryptui test program deletion in svn commit [2716]
+
 2009-02-04  Adam Schreiber  <sadam@clemson.edu>
 
     * pgp/seahorse-sign.glade:
@@ -10,6 +18,7 @@
     * configure.in: increment version number to 2.25.91
 
 === seahorse 2.25.90 ===
+
 2009-02-03  Adam Schreiber  <sadam@clemson.edu>
 
     * configure.in:
